feat udistrital/autenticacion_mid#60: Info básica SIDEAP
- Se agrega servicio para consultar la información básica por código y número de documento.
